--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-FormValidator-Simple-Plugin-DBIC-Unique version 0.01
+FormValidator-Simple-Plugin-DBIC-Unique version 0.04
 ====================================================
 
 The README is used to introduce the module and provide instructions on
@@ -21,17 +21,11 @@ To install this module type the following:
    make test
    make install
 
-DEPENDENCIES
-
-This module requires these other modules and libraries:
-
-  blah blah blah
-
 COPYRIGHT AND LICENCE
 
 Put the correct copyright and licence information here.
 
-Copyright (C) 2005 by A. U. Thor
+Copyright (C) 2005 by Lyo Kato
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.5 or,
