--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension FormValidator::Simple::Plugin::DBIC::Unique.
 
+0.05  Fri Feb 10 23:00:00 2005
+    - fixed to accept resultset object.
+      ( Thanks to Daisuke Murase )
+
 0.04  Tue Feb 7 23:00:00 2005
     - remove table-class verifying for DBIx::Class 0.05
       ( Thanks to Hideo Kimura )
